--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
           <h2 class="visually-hidden">Our advantages</h2>
           <ul class="about-us-list">
             <li>
+              <svg class="about-us-icon" width="264" height="112">
+                <use href="./images/symbol-defs.svg#icon-icon1"></use>
+              </svg>
               <h3 class="about-title">Strategy</h3>
               <p class="about-info">
                 Our goal is to identify the business problem to walk away with
@@ -81,6 +84,9 @@
               </p>
             </li>
             <li>
+              <svg class="about-us-icon" width="264" height="112">
+                <use href="./images/symbol-defs.svg#icon-icon2"></use>
+              </svg>
               <h3 class="about-title">Punctuality</h3>
               <p class="about-info">
                 Bring the key message to the brand's audience for the best price
@@ -88,6 +94,9 @@
               </p>
             </li>
             <li>
+              <svg class="about-us-icon" width="264" height="112">
+                <use href="./images/symbol-defs.svg#icon-icon3"></use>
+              </svg>
               <h3 class="about-title">Diligence</h3>
               <p class="about-info">
                 Research and confirm brands that present the strongest digital
@@ -95,6 +104,9 @@
               </p>
             </li>
             <li>
+              <svg class="about-us-icon" width="264" height="112">
+                <use href="./images/symbol-defs.svg#icon-icon4"></use>
+              </svg>
               <h3 class="about-title">Technologies</h3>
               <p class="about-info">
                 Design practice focused on digital experiences. We bring forth a
@@ -141,6 +153,82 @@
               <div class="team-descr">
                 <h3 class="team-name">Mark Guerrero</h3>
                 <p class="team-pos" lang="en">Product Designer</p>
+                <ul class="team-media-list">
+                  <li class="team-media-list-item">
+                    <a
+                      href=""
+                      class="team-media-list-link"
+                      aria-label="link for instagram"
+                      rel="noopener noreferrer"
+                      target="_blank"
+                    >
+                      <svg
+                        class="team-media-list-icon"
+                        width="16px"
+                        height="16px"
+                      >
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-media-list-item">
+                    <a
+                      href=""
+                      class="team-media-list-link"
+                      aria-label="link fo twitter"
+                      rel="noopener noreferrer"
+                      target="_blank"
+                    >
+                      <svg
+                        class="team-media-list-icon"
+                        width="16px"
+                        height="16px"
+                      >
+                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-media-list-item">
+                    <a
+                      href=""
+                      class="team-media-list-link"
+                      aria-label="link for facebook"
+                      rel="noopener noreferrer"
+                      target="_blank"
+                    >
+                      <svg
+                        class="team-media-list-icon"
+                        width="16px"
+                        height="16px"
+                      >
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-media-list-item">
+                    <a
+                      href=""
+                      class="team-media-list-link"
+                      aria-label="link for linkedin"
+                      rel="noopener noreferrer"
+                      target="_blank"
+                    >
+                      <svg
+                        class="team-media-list-icon"
+                        width="16px"
+                        height="16px"
+                      >
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li>
@@ -154,6 +242,82 @@
               <div class="team-descr">
                 <h3 class="team-name">Tom Ford</h3>
                 <p class="team-pos" lang="en">Frontend Developer</p>
+                <ul class="team-media-list">
+                  <li class="team-media-list-item">
+                    <a
+                      href=""
+                      class="team-media-list-link"
+                      aria-label="link for instagram"
+                      rel="noopener noreferrer"
+                      target="_blank"
+                    >
+                      <svg
+                        class="team-media-list-icon"
+                        width="16px"
+                        height="16px"
+                      >
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-media-list-item">
+                    <a
+                      href=""
+                      class="team-media-list-link"
+                      aria-label="link fo twitter"
+                      rel="noopener noreferrer"
+                      target="_blank"
+                    >
+                      <svg
+                        class="team-media-list-icon"
+                        width="16px"
+                        height="16px"
+                      >
+                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-media-list-item">
+                    <a
+                      href=""
+                      class="team-media-list-link"
+                      aria-label="link for facebook"
+                      rel="noopener noreferrer"
+                      target="_blank"
+                    >
+                      <svg
+                        class="team-media-list-icon"
+                        width="16px"
+                        height="16px"
+                      >
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-media-list-item">
+                    <a
+                      href=""
+                      class="team-media-list-link"
+                      aria-label="link for linkedin"
+                      rel="noopener noreferrer"
+                      target="_blank"
+                    >
+                      <svg
+                        class="team-media-list-icon"
+                        width="16px"
+                        height="16px"
+                      >
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li>
@@ -167,6 +331,82 @@
               <div class="team-descr">
                 <h3 class="team-name">Camila Garcia</h3>
                 <p class="team-pos" lang="en">Marketing</p>
+                <ul class="team-media-list">
+                  <li class="team-media-list-item">
+                    <a
+                      href=""
+                      class="team-media-list-link"
+                      aria-label="link for instagram"
+                      rel="noopener noreferrer"
+                      target="_blank"
+                    >
+                      <svg
+                        class="team-media-list-icon"
+                        width="16px"
+                        height="16px"
+                      >
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-media-list-item">
+                    <a
+                      href=""
+                      class="team-media-list-link"
+                      aria-label="link fo twitter"
+                      rel="noopener noreferrer"
+                      target="_blank"
+                    >
+                      <svg
+                        class="team-media-list-icon"
+                        width="16px"
+                        height="16px"
+                      >
+                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-media-list-item">
+                    <a
+                      href=""
+                      class="team-media-list-link"
+                      aria-label="link for facebook"
+                      rel="noopener noreferrer"
+                      target="_blank"
+                    >
+                      <svg
+                        class="team-media-list-icon"
+                        width="16px"
+                        height="16px"
+                      >
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-media-list-item">
+                    <a
+                      href=""
+                      class="team-media-list-link"
+                      aria-label="link for linkedin"
+                      rel="noopener noreferrer"
+                      target="_blank"
+                    >
+                      <svg
+                        class="team-media-list-icon"
+                        width="16px"
+                        height="16px"
+                      >
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li>
@@ -180,7 +420,169 @@
               <div class="team-descr">
                 <h3 class="team-name">Daniel Wilson</h3>
                 <p class="team-pos" lang="en">UI Designer</p>
+                <ul class="team-media-list">
+                  <li class="team-media-list-item">
+                    <a
+                      href=""
+                      class="team-media-list-link"
+                      aria-label="link for instagram"
+                      rel="noopener noreferrer"
+                      target="_blank"
+                    >
+                      <svg
+                        class="team-media-list-icon"
+                        width="16px"
+                        height="16px"
+                      >
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-media-list-item">
+                    <a
+                      href=""
+                      class="team-media-list-link"
+                      aria-label="link fo twitter"
+                      rel="noopener noreferrer"
+                      target="_blank"
+                    >
+                      <svg
+                        class="team-media-list-icon"
+                        width="16px"
+                        height="16px"
+                      >
+                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-media-list-item">
+                    <a
+                      href=""
+                      class="team-media-list-link"
+                      aria-label="link for facebook"
+                      rel="noopener noreferrer"
+                      target="_blank"
+                    >
+                      <svg
+                        class="team-media-list-icon"
+                        width="16px"
+                        height="16px"
+                      >
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-media-list-item">
+                    <a
+                      href=""
+                      class="team-media-list-link"
+                      aria-label="link for linkedin"
+                      rel="noopener noreferrer"
+                      target="_blank"
+                    >
+                      <svg
+                        class="team-media-list-icon"
+                        width="16px"
+                        height="16px"
+                      >
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <!-- customers -->
+      <section class="section customers">
+        <div class="container">
+          <h2 class="customers-title secondary-title">Customers</h2>
+          <ul class="customers-list">
+            <li class="customers-list-item">
+              <a
+                href=""
+                class="customers-list-link"
+                aria-label="link for the first company"
+                rel="noopener noreferrer"
+                target="_blank"
+              >
+                <svg class="customers-list-icon" width="104" height="56">
+                  <use href="./images/symbol-defs.svg#icon-logo1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-list-item">
+              <a
+                href=""
+                class="customers-list-link"
+                aria-label="link for the second company"
+                rel="noopener noreferrer"
+                target="_blank"
+              >
+                <svg class="customers-list-icon" width="104" height="56">
+                  <use href="./images/symbol-defs.svg#icon-logo2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-list-item">
+              <a
+                href=""
+                class="customers-list-link"
+                aria-label="link for the third company"
+                rel="noopener noreferrer"
+                target="_blank"
+              >
+                <svg class="customers-list-icon" width="104" height="56">
+                  <use href="./images/symbol-defs.svg#icon-logo3"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-list-item">
+              <a
+                href=""
+                class="customers-list-link"
+                aria-label="link for the forth company"
+                rel="noopener noreferrer"
+                target="_blank"
+              >
+                <svg class="customers-list-icon" width="104" height="56">
+                  <use href="./images/symbol-defs.svg#icon-logo4"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-list-item">
+              <a
+                href=""
+                class="customers-list-link"
+                aria-label="link for the fifth company"
+                rel="noopener noreferrer"
+                target="_blank"
+              >
+                <svg class="customers-list-icon" width="104" height="56">
+                  <use href="./images/symbol-defs.svg#icon-logo5"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-list-item">
+              <a
+                href=""
+                class="customers-list-link"
+                aria-label="link for the sixth company"
+                rel="noopener noreferrer"
+                target="_blank"
+              >
+                <svg class="customers-list-icon" width="104" height="56">
+                  <use href="./images/symbol-defs.svg#icon-logo6"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
@@ -188,14 +590,49 @@
     </main>
     <!-- footer -->
     <footer class="footer">
-      <div class="container">
-        <a class="footer-logo logo" href="./index.html"
-          ><span class="logo-part">Web</span>Studio</a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="footer-container container">
+        <div class="footer-left">
+          <a class="footer-logo logo" href="./index.html"
+            ><span class="logo-part">Web</span>Studio</a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div>
+          <p class="footer-social">Social media</p>
+          <ul class="footer-social-list">
+            <li class="footer-social-list-item">
+              <a href="" class="footer-social-list-link">
+                <svg class="footer-list-icon" width="24px" height="24px">
+                  <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-list-item">
+              <a href="" class="footer-social-list-link">
+                <svg class="footer-list-icon" width="24px" height="24px">
+                  <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-list-item">
+              <a href="" class="footer-social-list-link">
+                <svg class="footer-list-icon" width="24px" height="24px">
+                  <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-list-item">
+              <a href="" class="footer-social-list-link">
+                <svg class="footer-list-icon" width="24px" height="24px">
+                  <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
