--- a/portfolio.html
+++ b/portfolio.html
@@ -84,123 +84,123 @@
           </ul>
           <ul class="work-list-examples">
             <li class="work-list-example-item">
-              <div class="example-image">
+              <a href="" class="example-link">
                 <img
                   src="./images/portfolio1.jpg"
                   alt="App design"
                   width="360"
                 />
-              </div>
-              <div class="examples-info">
-                <h2 class="secondary-title">Banking App Interface Concept</h2>
-                <p class="examples-expl">App</p>
-              </div>
+                <div href="" class="examples-info">
+                  <h2 class="secondary-title">Banking App Interface Concept</h2>
+                  <p class="examples-expl">App</p>
+                </div>
+              </a>
             </li>
             <li class="work-list-example-item">
-              <div class="example-image">
+              <a href="" class="example-link">
                 <img
                   src="./images/portfolio2.jpg"
                   alt="Smartphone scans QR code"
                   width="360"
                 />
-              </div>
-              <div class="examples-info">
-                <h2 class="secondary-title">
-                  Постер <span lang="en">Cashless Payment</span>
-                </h2>
-                <p class="examples-expl">Marketing</p>
-              </div>
+                <div href class="examples-info">
+                  <h2 class="secondary-title">
+                    Постер <span lang="en">Cashless Payment</span>
+                  </h2>
+                  <p class="examples-expl">Marketing</p>
+                </div>
+              </a>
             </li>
             <li class="work-list-example-item">
-              <div class="example-image">
+              <a href="" class="example-link">
                 <img
                   src="./images/portfolio3.jpg"
                   alt="Laptop and smartphone"
                   width="360"
                 />
-              </div>
-              <div class="examples-info">
-                <h2 class="secondary-title">Meditation App</h2>
-                <p class="examples-expl">App</p>
-              </div>
+                <div class="examples-info">
+                  <h2 class="secondary-title">Meditation App</h2>
+                  <p class="examples-expl">App</p>
+                </div>
+              </a>
             </li>
             <li class="work-list-example-item">
-              <div class="example-image">
+              <a href="" class="example-link">
                 <img
                   src="./images/portfolio4.jpg"
                   alt="Hands on the steering wheel"
                   width="360"
                 />
-              </div>
-              <div class="examples-info">
-                <h2 class="secondary-title">Taxi Service</h2>
-                <p class="examples-expl">Marketing</p>
-              </div>
+                <div class="examples-info">
+                  <h2 class="secondary-title">Taxi Service</h2>
+                  <p class="examples-expl">Marketing</p>
+                </div>
+              </a>
             </li>
             <li class="work-list-example-item">
-              <div class="example-image">
+              <a href="" class="example-link">
                 <img
                   src="./images/portfolio5.jpg"
                   alt="Smartphone's main screen"
                   width="360"
                 />
-              </div>
-              <div class="examples-info">
-                <h2 class="secondary-title">Screen Illustrations</h2>
-                <p class="examples-expl">Design</p>
-              </div>
+                <div class="examples-info">
+                  <h2 class="secondary-title">Screen Illustrations</h2>
+                  <p class="examples-expl">Design</p>
+                </div>
+              </a>
             </li>
             <li class="work-list-example-item">
-              <div class="example-image">
+              <a href="" class="example-link">
                 <img
                   src="./images/portfolio6.jpg"
                   alt="Woman listening to music"
                   width="360"
                 />
-              </div>
-              <div class="examples-info">
-                <h2 class="secondary-title" lang="en">Online Courses</h2>
-                <p class="examples-expl">Marketing</p>
-              </div>
+                <div class="examples-info">
+                  <h2 class="secondary-title" lang="en">Online Courses</h2>
+                  <p class="examples-expl">Marketing</p>
+                </div>
+              </a>
             </li>
             <li class="work-list-example-item">
-              <div class="example-image">
+              <a href="" class="example-link">
                 <img
                   src="./images/portfolio7.jpg"
                   alt="Instagram stories models"
                   width="360"
                 />
-              </div>
-              <div class="examples-info">
-                <h2 class="secondary-title">Instagram Stories Concept</h2>
-                <p class="examples-expl">Design</p>
-              </div>
+                <div class="examples-info">
+                  <h2 class="secondary-title">Instagram Stories Concept</h2>
+                  <p class="examples-expl">Design</p>
+                </div>
+              </a>
             </li>
             <li class="work-list-example-item">
-              <div class="example-image">
+              <a href="" class="example-link">
                 <img
                   src="./images/portfolio8.jpg"
                   alt="Woman with shopper"
                   width="360"
                 />
-              </div>
-              <div class="examples-info">
-                <h2 class="secondary-title">Organic Food</h2>
-                <p class="examples-expl">Web Site</p>
-              </div>
+                <div class="examples-info">
+                  <h2 class="secondary-title">Organic Food</h2>
+                  <p class="examples-expl">Web Site</p>
+                </div>
+              </a>
             </li>
             <li class="work-list-example-item">
-              <div class="example-image">
+              <a href="" class="example-link">
                 <img
                   src="./images/portfolio9.jpg"
                   alt="Barista pouring coffee"
                   width="360"
                 />
-              </div>
-              <div class="examples-info">
-                <h2 class="secondary-title">Fresh Coffee</h2>
-                <p class="examples-expl">Web Site</p>
-              </div>
+                <div class="examples-info">
+                  <h2 class="secondary-title">Fresh Coffee</h2>
+                  <p class="examples-expl">Web Site</p>
+                </div>
+              </a>
             </li>
           </ul>
         </div>
